# code_masters

./: .gitignore  NONAME_28327488.out  NONAME_28367553.out  NONAME_28420885.out  README.md  XYZ_python.txt  e  main.py  pyproject.toml  test_mae.csv  test_rmse.csv  u_python_t07.txt
GNN_model/: GNN.py
GNN_model_startup/: GNN.py  GNN_inprogress.py  autoregreesive_roll_out.py  onestep_rollout.py
GNN_training/: gaussian3D.py  test_open_nc.py  test_open_zarr.py  test_precompute.py
code_to_Allan/: compute_energy_batch_new.py  test_energy.py
data/: coarse_data.yaml  coarse_data_10_waves.yaml  coarse_data_3_waves.yaml  config.yaml  config_100_waves.yaml  config_10_waves.yaml  config_3_waves.yaml  open_wave_10.py  open_waves_100.py  open_waves_3.py  save_data.py
data_generation/: DataPlotter.py  SimulatorWaveEquation.py  savegraph.py  wave_sphere_exact.py
data_generation_functions/: DataPlotter.py  DataPlotterAll.py  SimulatorWaveEquation.py  mesh_functions.py  wave_sphere_exact_split.py
integrate_sphere/: compute_energy.py  compute_energy_batch.py  compute_energy_batch_new.py  compute_energy_slower.py  driver.py  new_energy.py  old_compute_energy.py  old_compute_energy_batch_new.py  plot_true_enery.py  reference_coordinate.py  test_energy.py  test_spectral_error.py
notebooks/: NB_05_03_26_clf_comparison copy.ipynb  NB_05_03_26_clf_comparison.ipynb  NB_05_03_26_own.ipynb  NB_06_03_26_graph.ipynb  NB_09_03_26_sigma_test.ipynb  NB_data_all_25_02_26.ipynb  NB_data_all_26_02_26.ipynb  NB_datageneration_25_02_26.ipynb  NB_graphconstruction_25_02_26.ipynb  PY_09_03_26_data_generate_ensemble.py  graph_tests.py  wave_sphere_data.nc
old_code/: DataPlotter.py  SimulatorWaveEquation.py  new_dataset_xy.ipynb
raw_preds/: pred_batch_0.pt  pred_batch_1.pt  pred_batch_10.pt  pred_batch_11.pt  pred_batch_12.pt  pred_batch_13.pt  pred_batch_14.pt  pred_batch_15.pt  pred_batch_16.pt  pred_batch_17.pt  pred_batch_18.pt  pred_batch_19.pt  pred_batch_2.pt  pred_batch_20.pt  pred_batch_21.pt  pred_batch_22.pt  pred_batch_23.pt  pred_batch_24.pt  pred_batch_25.pt  pred_batch_26.pt  pred_batch_27.pt  pred_batch_28.pt  pred_batch_29.pt  pred_batch_3.pt  pred_batch_30.pt  pred_batch_31.pt  pred_batch_32.pt  pred_batch_33.pt  pred_batch_34.pt  pred_batch_4.pt  pred_batch_5.pt  (+74 more)
(+1537 files in other folders)
