[project]
name = "code-masters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "cartopy>=0.25.0",
    "data-generation>=0.0.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "mllam-data-prep",
    "pytorch-lightning>=2.6.1",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "trimesh>=4.11.3",
    "weather-model-graphs",
    "xarray>=2026.2.0",
]

[tool.uv.workspace]
members = [
    "weather-model-graphs",
    "mllam-data-prep",
    "neural_lam_project",
]

[tool.uv.sources]
weather-model-graphs = { workspace = true }
mllam-data-prep = { workspace = true }


