[project] 
name = "code-masters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "cartopy>=0.25.0",
    "cf-xarray>=0.10.11",
    "data-generation>=0.0.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "meshzoo>=0.12.1",
    "mllam-data-prep",
    "modepy>=2026.1",
    "netcdf4>=1.7.4",
    "neural-lam",
    "pytorch-lightning>=2.6.1",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "trimesh>=4.11.3",
    "weather-model-graphs",
    "xarray>=2026.2.0",
]

[tool.uv.workspace]
members = [
    "weather-model-graphs",
    "mllam-data-prep",
    "neural_lam_project",
    "neural-lam",
]

[tool.uv.sources]
weather-model-graphs = { workspace = true }
mllam-data-prep = { workspace = true }
neural-lam = { workspace = true }
# Tilføj torch her for at tvinge den til at bruge CUDA-indekset
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true


